# cscore

./: README.md  README_local.md  mkdocs.yml  pyproject.toml  score.py  setup.py
.github/workflows/: docs.yml
cscore/: __init__.py  cli.py  core.py
cscore/misc/: simulate_scores.py
docs/: cscore_showcase.ipynb  examples.md  index.md  simulation.ipynb
testdata/: all_bhGSE237099_1_unloading_reloading_cscore_sign.txt
testdata/GSE236519/: KD_Deep_Layer_neurons.txt  KD_Interneurons.txt  KD_Sup_Layer_neurons.txt  KO_Deep_Layer_neurons.txt  KO_Interneurons.txt  KO_Sup_Layer_neurons.txt  deg_pooled_screen_Dgcr8.txt  deg_pooled_screen_Dgcr8_Deep_layer_neurons.txt  deg_pooled_screen_Dgcr8_Interneurons.txt  deg_pooled_screen_Dgcr8_Supp_layer_neurons.txt  kd_ko_deep_layer_neurons.txt  lgdel_model_deg_Deep_layer_neurons.txt  lgdel_model_deg_Interneurons.txt  lgdel_model_deg_Supp_layer_neurons.txt
testdata/GSE237099/: GSE237099_1_unloading_reloading_Unloading_vs_Control_deseq2.txt  TF_GSE237099_1_unloading_reloading_cscore.txt
testdata/simulation/: sim_hist.tsv  sim_scores.tsv
